# chorus

./: .dockerignore  .gitignore  LICENSE  README.md  Taskfile.yml  rust-toolchain.toml
.github/workflows/: ci.yml  nightly-gate.yml  release.yml
artifacts/: dst-certification.json
bench/: run_suite.py  test_run_suite.py
docker/: Dockerfile
docker/scripts/: check_manifest_field_parity.py  orchestrate.py  test_orchestrate.py
p/: QuorumModel.pproj  QuorumProof.pproj  TRACE_EVENTS.txt
p/model/: Drivers.p  Manifest.p  Monitors.p  PipelinedWal.p  ReadonlyFollower.p  Tests.p  Types.p  WriterProcess.p  ZonalBucket.p
p/pobserve/: README.md  pom.xml
p/pobserve/src/main/java/chorus/pobserve/: ChorusPObserve.java
p/proof/: QuorumProof.p
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/client/: Cargo.toml  README.md
rust/client/examples/: database_wal.rs
rust/client/src/: auth.rs  engine.rs  error.rs  grpc.rs  grpc_internal_tests.rs  lib.rs  maintenance.rs  manifest.rs  manifest_store.rs  metrics.rs  protocol.rs  record.rs  segment.rs  transport.rs
rust/client/src/grpc_internal_tests/: engine.rs  maintenance.rs  readonly.rs  recovery.rs  topology.rs  transport.rs  writer.rs
rust/client/tests/: grpc_integration.rs
rust/dst/: Cargo.toml  README.md
rust/dst/src/: lib.rs  main.rs  production.rs  sim_transport.rs
rust/dst/tests/: certification.rs
rust/dst/tests/fixtures/: README.md  pobserve-rejects-open-tail.jsonl  trace-events.jsonl
rust/fake-gcs/: Cargo.toml  README.md  build.rs
rust/fake-gcs/proto/: storage_subset.proto
rust/fake-gcs/src/: lib.rs
rust/trace-checker/: Cargo.toml  README.md
rust/trace-checker/src/: main.rs
