[package]
name = "chorus-dst"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
hyper.workspace = true
hyper-util.workspace = true
chorus-client = { path = "../client", features = ["dst-support"] }
chorus-fake-gcs = { path = "../fake-gcs" }
crc32c.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
turmoil.workspace = true
