[package]
name = "chorus-fake-gcs"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
crc32c.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build.workspace = true
