[package]
name = "chorus-trace-checker"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chorus-dst = { path = "../dst" }
serde_json.workspace = true
